<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_chat_short"
        android:shortcutLongLabel="@string/shortcut_new_chat_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vervan.chat"
            android:targetClass="com.vervan.chat.MainActivity">
            <extra android:name="vervan_shortcut" android:value="new_chat" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="voice"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_voice_short"
        android:shortcutLongLabel="@string/shortcut_voice_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vervan.chat"
            android:targetClass="com.vervan.chat.MainActivity">
            <extra android:name="vervan_shortcut" android:value="voice" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="capture"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_capture_short"
        android:shortcutLongLabel="@string/shortcut_capture_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vervan.chat"
            android:targetClass="com.vervan.chat.MainActivity">
            <extra android:name="vervan_shortcut" android:value="capture" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vervan.chat"
            android:targetClass="com.vervan.chat.MainActivity">
            <extra android:name="vervan_shortcut" android:value="search" />
        </intent>
    </shortcut>
</shortcuts>
